# threescalers

./: .appveyor.yml  .gitignore  .mailmap  .rls.toml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  aliases.js  bors.toml  build.rs  cbindgen.toml  index.html  search-index.js  settings.html  source-files.js
.cargo/: config
.github/: CODEOWNERS
.github/workflows/: audit.yaml  ci.yaml  clippy.yaml  coverage.yaml  format.yaml
ci/: dependency-decisions.yml  license-check.sh
examples/: curl-easy-report.rs  curl-easy2-report.rs  curl-report.rs  reqwest-report.rs
implementors/alloc/string/: trait.ToString.js
implementors/core/borrow/: trait.Borrow.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/ops/index/: trait.Index.js
implementors/core/str/: trait.FromStr.js
implementors/error_chain/: trait.ChainedError.js
implementors/serde/de/: trait.Deserialize.js  trait.Error.js
implementors/serde/ser/: trait.Error.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/threescalers/http/request/: trait.SetupRequest.js
serde_xml_rs/: all.html  enum.ErrorKind.html  index.html  struct.Error.html
serde_xml_rs/de/: fn.from_reader.html  fn.from_str.html  index.html  struct.Deserializer.html
serde_xml_rs/ser/: fn.to_string.html  fn.to_writer.html  index.html  struct.Serializer.html
src/: api_call.rs  apicall.rs  application.rs  capi.rs  credentials.rs  encoding.rs  errors.rs  extensions.rs  http.rs  lib.rs  request.rs  response.rs  service.rs  timestamp.rs  transaction.rs  usage.rs  user.rs  util.rs  version.rs
src/capi/: c_slice.rs  encoding.rs  ffi_cow.rs  mapping_rule.rs  version.rs
src/extensions/: extension.rs  extensions.rs  list.rs
src/http/: byte_str.rs.html  convert.rs.html  encoding.rs  endpoints.rs  error.rs.html  extensions.rs.html  lib.rs.html  mapping_rule.rs  method.rs.html  parameters.rs  request.rs  request.rs.html  request_parameters.rs  response.rs.html  status.rs.html  version.rs.html
src/http/header/: map.rs.html  mod.rs.html  name.rs.html  value.rs.html
src/http/mapping_rule/: escaping.rs  method.rs  serde_impl.rs
src/http/request/: curl.rs  http.rs  http_types.rs  reqwest.rs
src/http/request/curl/: easy.rs  easy2.rs
src/http/uri/: authority.rs.html  builder.rs.html  mod.rs.html  path.rs.html  port.rs.html  scheme.rs.html
src/response/: app_keys_list.rs  metrics_hierarchy.rs  usage_report.rs
src/serde_xml_rs/: error.rs.html  lib.rs.html
src/serde_xml_rs/de/: map.rs.html  mod.rs.html  seq.rs.html  var.rs.html
src/serde_xml_rs/ser/: mod.rs.html  var.rs.html
src/threescalers/: api_call.rs.html  application.rs.html  credentials.rs.html  encoding.rs.html  errors.rs.html  extensions.rs.html  http.rs.html  lib.rs.html  response.rs.html  service.rs.html  timestamp.rs.html  transaction.rs.html  usage.rs.html  user.rs.html  version.rs.html
src/threescalers/extensions/: extension.rs.html  extensions.rs.html
src/threescalers/http/: endpoints.rs.html  parameters.rs.html  request.rs.html
src/util/: compat.rs  string.rs
src/util/compat/: features.rs  macros.rs
tests/: api_call.rs  apicall.rs
threescalers/: all.html  index.html  sidebar-items.js  type.Never.html
threescalers/api_call/: enum.Kind.html  index.html  sidebar-items.js  struct.ApiCall.html  struct.Builder.html
threescalers/application/: enum.Application.html  index.html  sidebar-items.js  struct.AppId.html  struct.AppKey.html  struct.OAuthToken.html  struct.UserKey.html
threescalers/credentials/: enum.Credentials.html  index.html  sidebar-items.js  struct.ProviderKey.html  struct.ServiceId.html  struct.ServiceToken.html
threescalers/encoding/: fn.encode.html  index.html
threescalers/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
threescalers/extensions/: enum.Extension.html  index.html  sidebar-items.js  struct.Extensions.html
threescalers/extensions/extension/: enum.Extension.html
threescalers/extensions/extensions/: struct.Extensions.html
threescalers/http/: enum.Parameters.html  index.html  sidebar-items.js
threescalers/http/endpoints/: constant.AUTHORIZE_ENDPOINT.html  constant.AUTHREP_ENDPOINT.html  constant.OAUTH_AUTHORIZE_ENDPOINT.html  constant.OAUTH_AUTHREP_ENDPOINT.html  constant.REPORT_ENDPOINT.html  index.html  sidebar-items.js
threescalers/http/parameters/: enum.Parameters.html
threescalers/http/request/: index.html  sidebar-items.js  struct.Request.html  trait.SetupRequest.html
threescalers/response/: enum.Authorization.html  enum.Period.html  enum.UsageReports.html  index.html  sidebar-items.js  struct.DeniedAuthorization.html  struct.Metric.html  struct.MetricsHierarchy.html  struct.OkAuthorization.html  struct.PeriodInstance.html  struct.PeriodTime.html  struct.UsageData.html  struct.UsageReport.html
threescalers/service/: index.html  struct.Service.html
threescalers/timestamp/: index.html  sidebar-items.js  struct.Timestamp.html  type.AsSecsUnsignedInt.html  type.TimestampOffsetInt.html
threescalers/transaction/: index.html  struct.Transaction.html
threescalers/usage/: index.html  sidebar-items.js  struct.MetricUsage.html  struct.Usage.html
threescalers/user/: enum.User.html  index.html  sidebar-items.js  struct.OAuthToken.html  struct.UserId.html
threescalers/version/: constant.USER_AGENT.html  constant.VERSION.html  index.html  sidebar-items.js
(+11 files in other folders)
