[package]
edition = "2018"
name = "threescalers"
description = "3scale API client library for Rust"
version = "0.7.0"
authors = ["Alejandro Martinez Ruiz <alex@flawedcode.org>", "David Ortiz Lopez <z.david.ortiz@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/3scale-rs/threescalers"
readme = "README.md"
keywords = ["3scale", "api-management", "api", "apisonator"]
categories = ["api-bindings"]
exclude = [
    ".rls.toml",
    ".rustfmt.toml",
    ".gitignore",
    "bors.toml",
    ".appveyor.yml",
    ".travis.yml",
    "/ci/**",
]

[badges]
appveyor = { repository = "3scale-rs/threescalers" }
travis-ci = { repository = "3scale-rs/threescalers" }
codecov = { repository = "3scale-rs/threescalers" }
maintenance = { status = "actively-developed" }

[features]
default = ["std", "xml-response"]

# Use std library
std = ["no-std-compat/std", "anyhow/std"]
# Add in conversions for http's crate types
http-types = ["http_types"]
# Add in conversions for reqwest's crate types
reqwest-async = ["reqwest", "http-types"]
reqwest-sync = ["reqwest", "reqwest/blocking", "http-types"]
reqwest-all = ["reqwest-async", "reqwest-sync"]
# Add in conversions for curl's crate types
curl-easy = ["curl"]
curl-easy2 = ["curl"]
curl-all = ["curl-easy", "curl-easy2"]
# Include all supported clients types
all-types = ["http-types", "reqwest-all", "curl-all"]
# Response parsing
xml-response = ["serde-xml-rs", "serde", "chrono"]

[dependencies]
percent-encoding = "^2"
http_types = { version = "^0.2", package = "http", optional = true }
reqwest = { version = ">= 0.10, < 0.12", optional = true }
curl = { version = "^0.4", optional = true }
serde = { version = "^1", optional = true, default-features = false, features = ["alloc", "derive"] }
serde-xml-rs = { version = "^0.4", optional = true }
chrono = { version = "^0.4", optional = true, default-features = false }
no-std-compat = { version = "^0.4", features = ["alloc"] }
anyhow = { version = "^1", default-features = false }

[build-dependencies]
rustc_version = "^0.3"

[[example]]
name = "reqwest-report"
required-features = ["reqwest-sync"]

[[example]]
name = "curl-easy-report"
required-features = ["curl-easy"]

[[example]]
name = "curl-easy2-report"
required-features = ["curl-easy2"]

[dev-dependencies]
serde_json = "^1.0"
