[package]
edition = "2018"
name = "threescalers"
description = "3scale API client library for Rust"
version = "0.8.0"
authors = ["Alejandro Martinez Ruiz <alex@flawedcode.org>", "David Ortiz Lopez <z.david.ortiz@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/3scale-rs/threescalers"
readme = "README.md"
keywords = ["3scale", "api-management", "api", "apisonator"]
categories = ["api-bindings"]
exclude = [
    ".gitignore",
    "bors.toml",
    ".mailmap",
    "/ci/**",
    "/.github/**",
]

[badges]
codecov = { repository = "3scale-rs/threescalers" }
maintenance = { status = "actively-developed" }

[features]
default = ["std", "xml-response", "rest-mappings"]

# Use std library
std = ["no-std-compat/std", "anyhow/std", "regex/std"]
# Add in conversions for http's crate types
http-types = ["http_types"]
# Add in conversions for reqwest's crate types
reqwest-async = ["reqwest", "http-types"]
reqwest-sync = ["reqwest", "reqwest/blocking", "http-types"]
reqwest-all = ["reqwest-async", "reqwest-sync"]
# Add in conversions for curl's crate types
curl-easy = ["curl"]
curl-easy2 = ["curl"]
curl-all = ["curl-easy", "curl-easy2"]
# Include all supported clients types
all-types = ["http-types", "reqwest-all", "curl-all"]
# Response parsing
xml-response = ["serde-xml-rs", "serde", "chrono"]
# HTTP mapping rules
rest-mappings = ["regex", "lazy_static"]
rest-mappings-serde = ["serde"]
# C API
capi = []

[dependencies]
percent-encoding = "^2"
http_types = { version = "^0.2", package = "http", optional = true }
reqwest = { version = ">= 0.10, < 0.12", optional = true }
curl = { version = "^0.4", optional = true }
serde = { version = "^1", optional = true, default-features = false, features = ["alloc", "derive"] }
serde-xml-rs = { version = "^0.4", optional = true }
chrono = { version = "^0.4", optional = true, default-features = false }
no-std-compat = { version = "^0.4", features = ["alloc"] }
anyhow = { version = "^1", default-features = false }
regex = { version = "^1", optional = true, default-features = false, features = ["perf"] }
# lazy_static has a "negative" no_std flag rather than an additive "std" flag :/
lazy_static = { version = "^1", optional = true, default-features = false, features = ["spin_no_std"] }

[[example]]
name = "reqwest-report"
required-features = ["reqwest-sync"]

[[example]]
name = "curl-easy-report"
required-features = ["curl-easy"]

[[example]]
name = "curl-easy2-report"
required-features = ["curl-easy2"]

[dev-dependencies]
serde_json = "^1.0"
itertools = "^0.10"
rand = "^0.8"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.capi.header]
# Used as header file name. By default this is equal to the crate name.
# The name can be with or without the header filename extension `.h`
#name = "new_name"
# Install the header into a subdirectory with the name of the crate. This
# is enabled by default, pass `false` or "" to disable it.
#subdirectory = "libthreescalers-0.8/threescalers"
# Generate the header file with `cbindgen`, or copy a pre-generated header
# from the `assets` subdirectory. By default a header is generated.
#generation = true
# Can be use to disable header generation completely.
# This can be used when generating dynamic modules instead of an actual library.
#enabled = true

[package.metadata.capi.pkg_config]
# Used as the package name in the pkg-config file and defaults to the crate name.
#name = "libthreescalers"
# Used as the package description in the pkg-config file and defaults to the crate description.
description = "3scale API client library"
# Used as the package version in the pkg-config file and defaults to the crate version.
#version = "1.2.3"
# Used as the Requires field in the pkg-config file, if defined
#requires = "gstreamer-1.0, gstreamer-base-1.0"
# Used as the Requires.private field in the pkg-config file, if defined
#requires_private = "gobject-2.0, glib-2.0 >= 2.56.0, gmodule-2.0"
# Strip the include search path from the last n components, useful to support installing in a
# subdirectory but then include with the path. By default it is 0.
#strip_include_path_components = 1

[package.metadata.capi.library]
# Used as the library name and defaults to the crate name. This might get
# prefixed with `lib` depending on the target platform.
#name = "new_name"
# Used as library version and defaults to the crate version. How this is used
# depends on the target platform.
#version = "1.2.3"
# Used to install the library to a subdirectory of `libdir`.
#install_subdir = "gstreamer-1.0"
# Used to disable versioning links when installing the dynamic library
#versioning = false
# Add `-Cpanic=abort` to the RUSTFLAGS automatically, it may be useful in case
# something might panic in the crates used by the library.
rustflags = "-C panic=abort -C link-args=-Wl,-Map=libthreescalers.map"
